[Bug #20942] Do not leave the VM locked at a memory error